[package]
name = "solver"
version = "0.1.0"
edition = "2018"

[dependencies]
gtk = "0.14.0"
gio = "0.14.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[dependencies.gtk]
#version = "0.9.0"
#features = ["v3_16"]

#[dependencies.gio]
#version = ""
#features = ["v2_44"]

